# ScholarRef

./: .gitignore  CITATION.cff  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  SECURITY.md  ScholarRef.spec  pyproject.toml  reference_converter.py  release-notes-v1.0.1.md  scholarref.py  scholarref_gui.py  scholarref_runtime.py  verify_reference_integrity.py
.github/: pull_request_template.md  release.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  suggestion.yml
.github/workflows/: windows-package.yml
docs/: release-notes-v1.0.0.md  release-notes-v1.0.1.md  windows-release-checklist.md  windows-trust-and-signing.md
installer/: ScholarRef.iss
scripts/: build_windows.ps1  build_windows_installer.ps1  capture_windows_visuals.py  sign_windows_artifact.ps1  test_clean_venv.ps1  test_windows_installer.ps1
tests/: generate_edgecase_docs.py  run_edgecase_tests.py  test_10_wild_cases.py  test_gui_packaging.py  test_huge_jumbled_docs.py  test_hybrid_mismatched_refs.py  test_reference_boundary_and_duplicates.py  test_release_packaging.py  test_verify_reference_integrity.py
